[package]
name = "redarrow"
version = "0.9.0"
authors = ["everpcpc <git@everpcpc.com>"]
edition = "2018"
license = "MIT"
description = "Execute commands on remote servers."
readme = "README.md"
keywords = ["redarrow", "remote", "atomation"]
categories = ["command-line-utilities"]

[[bin]]
name = "redarrow-client"
path = "src/client/main.rs"

[[bin]]
name = "redarrow-check"
path = "src/check/main.rs"

[[bin]]
name = "redarrow-server"
path = "src/server/main.rs"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
url = "2.1"
curl = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
glob = "0.3.0"
anyhow = "1.0"
rust-ini = "0.13"
regex = "1"
