[package]
name = "redarrow"
version = "0.11.0"
authors = ["everpcpc <git@everpcpc.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Execute commands on remote servers."
readme = "README.md"
keywords = ["redarrow", "remote", "atomation"]
categories = ["command-line-utilities"]

[[bin]]
name = "redarrow-client"
path = "src/client/main.rs"

[[bin]]
name = "redarrow-check"
path = "src/check/main.rs"

[[bin]]
name = "redarrow-server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1.3"
url = "2.1"
curl = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
rust-ini = "0.13"
regex = "1"
wait-timeout = "0.2"
nix = "0.17"
bytes = "0.5"
log = "0.4"
env_logger = "0.7"
actix-web = "2"
actix-utils = "1"
actix-rt = "1"
futures-timer = "3"
futures = "0.3"
tokio = { version = "0.2", features = ["signal"] }
