[package]
name = "redarrow"
version = "0.15.0"
authors = ["everpcpc <git@everpcpc.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Execute commands on remote servers."
readme = "README.md"
keywords = ["redarrow", "remote", "atomation"]
categories = ["command-line-utilities"]

[[bin]]
name = "redarrow-client"
path = "src/client/main.rs"

[[bin]]
name = "redarrow-check"
path = "src/check/main.rs"

[[bin]]
name = "redarrow-server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
rust-ini = "0.13"
regex = "1"
shlex = "0.1"
wait-timeout = "0.2"
nix = "0.17"
bytes = "0.5"
log = "0.4"
pretty_env_logger = "0.3"
warp = "0.2"
hyper = { version = "0.13", features = ["stream"] }
futures = "0.3"
tokio = { version = "0.2", features = ["signal", "macros", "sync"] }
